--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   flutter_secure_storage: ^9.2.2
   googleapis_auth: ^1.6.0
   firebase_auth: ^5.3.4
+  dartz: ^0.10.1
+  dio: ^5.7.0
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_test:
