--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   dio: ^5.7.0
   get_it: ^8.0.3
   animated_snack_bar: ^0.4.0
+  flutter_svg: ^2.0.17
 
 dev_dependencies:
   flutter_test:
