--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.5.4
+  sdk: '>=3.5.4 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -55,6 +55,7 @@ dependencies:
   get_it: ^8.0.3
   animated_snack_bar: ^0.4.0
   flutter_svg: ^2.0.17
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
