--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   device_info_plus: ^11.2.2
   hive_flutter: ^1.1.0
   path_provider: ^2.1.5
+  flutter_otp_text_field: ^1.5.1+1
 
 dev_dependencies:
   flutter_test:
