--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,12 +55,14 @@ dependencies:
   get_it: ^8.0.3
   animated_snack_bar: ^0.4.0
   flutter_svg: ^2.0.17
-  intl: ^0.18.0
+  intl: ^0.20.2
   device_info_plus: ^11.2.2
   hive_flutter: ^1.1.0
   path_provider: ^2.1.5
   pinput: ^5.0.1
   flutter_speed_dial: ^7.0.0
+  screenshot: ^3.0.0
+  share_plus: ^11.0.0
 
 dev_dependencies:
   flutter_test:
